chore: updates openapi
