# src/records/routes/recordsRouter.ts
@@ -6,8 +6,11 @@ const recordsRouterFactory: FactoryFunction<Router> = (dependencyContainer) => {
   const router = Router();
   const controller = dependencyContainer.resolve(RecordsController);
 
+  //router.get('/', controller.getRecords);
   router.get('/:recordName', controller.getRecord);
+  router.post('/validate', controller.validateRecord);
   router.post('/:recordName', controller.createRecord);
+  //router.delete('/:recordName', controller.deleteRecord);
 
   return router;
 };
